# rme

./: .gitignore  Cargo.toml  GRAMMAR.ebnf
src/: ansi.rs  arena.rs  ast.rs  diag.rs  interpret.rs  lexer.rs  lib.rs  main.rs  parser.rs  span.rs  typeck.rs
src/ast/: debug.rs  display.rs  mod.rs
src/diag/: level.rs  mod.rs
src/interpret/: value.rs
src/lexer/: mod.rs  punct.lexed  punct.test  tests.rs  token.rs
src/parser/: expr.rs  mod.rs
src/source/: mod.rs
src/typeck/: infer.rs  mod.rs  polytype.rs  ty.rs  unify.rs  utils.rs
tests/: lexer.rs  parser.rs  regressions.rs  typeck.rs
tests/lexer/: identifiers.out  identifiers.test  invalid_tokens.out  invalid_tokens.test  literals.out  literals.test  multi-char.out  parse_fn_panic.out  program.out  program.test  punct.out  punct.test  unicode.out  unicode.test  whitespace.out  whitespace.test
tests/parser/: from_grammar.out  from_grammar.test  let_stmt.out  one_plus_one.out  one_plus_one.test  parse_fn_panic.out  prec1.out  prec2.out  prec2.test  prec3.out  prec3.test
tests/parser/expr/: literals.out  literals.test  missing.out  postfix_unary_ops.out  prec1.out  prec1.test  prefix_unary_ops.out  variables.out  variables.test
tests/parser/stmt/: correct.out  missing_semi.out  missing_semi2.out  missing_semi2.test  return_bad.out  return_ok.out  return_ok.test
tests/parser/var_def/: correct.out  correct.test  missing_equals.out  missing_equals.test  missing_let.out  missing_name.out  (+1 more)
tests/typeck/: id_fn.out  id_fn.test  literals.out  literals.test  recursive_ty.out  recursive_ty.test  return.out
(+25 files in other folders)
